common-applications/test-environment/majun-anti-poisoning/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: majun-anti-poisoning
  name: majun-anti-poisoning
