common-applications/test-environment/majun-anti-poisoning/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-poisoning
  namespace: majun-anti-poisoning
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: anti-poisoning
  template:
    metadata:
      labels:
        app: anti-poisoning
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: anti-poisoning
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/majun/anti-poisoning-test:bb9c06c0fc149693db759b9f0fd9067bc3cd1069
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 2000m
            memory: 4000Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
        volumeMounts:
        - mountPath: /var/log
          name: log-data
        readinessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 20
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
      volumes:
      - name: log-data
        persistentVolumeClaim:
          claimName: log-data-volume
